--- a/apps/mobile/src/locales/en.json
+++ b/apps/mobile/src/locales/en.json
@@ -14,6 +14,8 @@
     "delete": "Delete",
     "edit": "Edit",
     "done": "Done",
+    "and": "and",
+    "ok": "OK",
     "back": "Back",
     "next": "Next",
     "finish": "Finish",
@@ -87,10 +89,7 @@
     },
     "reset_password": {
       "title": "Reset Password",
-      "subtitle": "Enter your reset token and new password",
-      "token_label": "Reset Token",
-      "token_placeholder": "Enter the token from your email",
-      "token_required": "Reset token is required",
+      "subtitle": "Create a new password to secure your account",
       "password_label": "New Password",
       "password_placeholder": "Enter your new password",
       "confirm_password_label": "Confirm Password",
@@ -104,7 +103,20 @@
       "error_reset_failed": "Failed to reset password",
       "error_invalid_token": "Invalid or expired reset token",
       "error_token_expired": "Reset token has expired. Please request a new one.",
+      "validating_link": "Validating your reset link...",
+      "request_new_link": "Request a new reset email",
       "back_to_login": "Back to Login"
+    },
+    "social": {
+      "provider_mismatch_title": "Try another sign-in method",
+      "provider_mismatch_message": "You previously used {{providers}} with this email. Please sign in with that method, then link additional providers from Settings.",
+      "provider_mismatch_message_default": "You already have an account with this email. Please sign in with your original method, then link other providers from Settings.",
+      "coming_soon": "Linking coming soon",
+      "providers": {
+        "password": "email & password",
+        "google": "Google",
+        "apple": "Sign in with Apple"
+      }
     },
     "change_password": {
       "title": "Change Password",
@@ -200,7 +212,14 @@
     "help_center": "Help Center",
     "contact_us": "Contact Us",
     "free_plan": "Free Plan",
-    "pro_plan": "Pro Plan"
+    "pro_plan": "Pro Plan",
+    "linked_accounts": "Linked Accounts",
+    "link_account": "Link",
+    "unlink_account": "Unlink",
+    "linked": "Linked",
+    "not_linked": "Not linked",
+    "linking_unavailable": "Linking coming soon.",
+    "primary_provider_notice": "Your primary sign-in method is {{provider}}."
   },
   "web": {
     "hero": {
@@ -306,6 +325,18 @@
       "cancel_failed": "Failed to cancel notification",
       "register_failed": "Failed to register for notifications"
     }
+  },
+  "system_status": {
+    "offline": {
+      "title": "Service temporarily unavailable",
+      "message": "We’re having trouble reaching the server. Some actions may not work right now."
+    },
+    "degraded": {
+      "title": "Service is experiencing issues",
+      "message": "We’re still online, but some features may be slow or temporarily unavailable."
+    },
+    "retry": "Retry",
+    "refreshing": "Checking…"
   },
   "onboarding": {
     "ai_motivation": {
